# zephlet

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  Kconfig  README.md  justfile  zephlet.c  zephlet.h  zephlet.proto  zephlet_coord.c  zephlet_coord.h  zephlet_iterables.ld  zephlet_options.proto
.github/actions/setup-workspace/: action.yml
.github/workflows/: ci.yml
codegen/: generate_adapter.py  generate_proto.py  generate_zephlet.py  requirements.txt  zephyr_zephlet_codegen.cmake
codegen/templates/: adapter.c.jinja  adapter_kconfig.jinja  zephlet.c.jinja  zephlet.h.jinja  zephlet_coap_interface.c.jinja  zephlet_coap_interface.h.jinja  zephlet_impl.c.jinja  zephlet_interface.c.jinja  zephlet_interface.h.jinja  zephlet_priv.h.jinja
codegen/zephyr_zephlet_template/: copier.yml
codegen/zephyr_zephlet_template/template/{{ zephlet_name_lower }}/: CMakeLists.txt.jinja  Kconfig.jinja  zlet_{{ zephlet_name_lower }}.c.jinja  zlet_{{ zephlet_name_lower }}.h.jinja  zlet_{{ zephlet_name_lower }}.proto.jinja  {{ prefix }}{{ zephlet_name_lower }}.c.jinja  {{ prefix }}{{ zephlet_name_lower }}.h.jinja
codegen/zephyr_zephlet_template/template/{{ zephlet_name_lower }}/tests/integration/src/: test_{{ zephlet_name_lower }}_integration.c.jinja
codegen/zephyr_zephlet_template/template/{{ zephlet_name_lower }}/zephyr/: module.yml.jinja
codegen/zephyr_zephlet_template/template/{{ zephlet_name_lower }}/{% if with_module %}tests{% endif %}/integration/: CMakeLists.txt.jinja  prj.conf.jinja  testcase.yaml.jinja
codegen/zephyr_zephlet_template/template/{{ zephlet_name_lower }}/{% if with_module %}tests{% endif %}/integration/src/: test_{{ zephlet_name_lower }}_integration.c.jinja
codegen/zephyr_zephlet_template/template/{{ zephlet_name_lower }}/{% if with_module %}zephyr{% endif %}/: module.yml.jinja
docs/adr/: 0001-zephlet-frontends.md
docs/issues/: 001-explicit-invoke-report-proto.md  002-synchronous-call-helpers.md  003-split-fire-and-forget-from-request-response.md  004-optional-report-channel.md  005-auto-correlation-in-wait-report.md
docs/plans/: coap-frontend.md
frontends/coap/: CMakeLists.txt  sections-ram.ld  zephlet_coap_discovery.c  zephlet_coap_frontend.c  zephlet_coap_observe.c  zephlet_coap_send.c  zephlet_coap_translate.c  zephlet_coap_uri.c
frontends/coap/include/: zephlet_coap_consts.h  zephlet_coap_observe.h  zephlet_coap_send.h  zephlet_coap_translate.h  zephlet_coap_types.h  zephlet_coap_uri.h
presentation/: PLAN.md  main.typ
tests/coap_buildhash/: README.md  baseline.mps2_an385.txt  footprint_gate.sh
tests/coap_functional/: CMakeLists.txt  INTEROP.md  prj.conf  sections-ram.ld  testcase.yaml
tests/coap_functional/pytest/: conftest.py  requirements.txt  test_discovery.py  test_discovery_truncate.py  test_dtls.py  test_hardening.py  test_observe.py  test_rpc.py  test_smoke.py
tests/coap_functional/src/: main.c
tests/coap_functional/zephlets/silent/: CMakeLists.txt  Kconfig  zlet_silent.c  zlet_silent.h  zlet_silent.proto
tests/coap_functional/zephlets/silent/zephyr/: module.yml
tests/coap_functional/zephlets/tick/: CMakeLists.txt  Kconfig  zlet_tick.c  zlet_tick.h  zlet_tick.proto
tests/coap_functional/zephlets/tick/zephyr/: module.yml
tests/coap_functional/zephlets/ui/: CMakeLists.txt  Kconfig  zlet_ui.c  zlet_ui.h  zlet_ui.proto
tests/coap_functional/zephlets/ui/zephyr/: module.yml
tests/coap_translate/: CMakeLists.txt  prj.conf  testcase.yaml
tests/coap_translate/src/: main.c  test_msg.proto
tests/codegen/: README.md  test_codegen.py
tests/codegen/fixtures/: tick_commented_opt.proto  tick_discoverable_custom.proto  tick_discoverable_full.proto  tick_discoverable_missing.proto  tick_no_opt.proto  tick_opted.proto
tests/shared/coord/src/: main.c
tests/shared/dispatch/: CMakeLists.txt  prj.conf  testcase.yaml
tests/shared/dispatch/src/: main.c
west/: west-commands.yml  zephlet_commands.py
zephyr/: module.yml
